manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
  name: davtro02
  labels:
    app.kubernetes.io/part-of: davtro-platform
    istio-injection: enabled
